--- a/index.html
+++ b/index.html
@@ -1203,15 +1203,14 @@ function loadMemories() {
             let mediaHtml = '';
             if (memory.isGoogleDrive) {
                 if (memory.type === 'video') {
-                    mediaHtml = `<iframe src="${memory.file}" width="100%" height="400" allow="autoplay" allowfullscreen class="detail-image"></iframe>`;
+                    mediaHtml = `<iframe src="https://drive.google.com/file/d/${memory.fileId}/preview" width="100%" height="300" allow="autoplay"></iframe>`;
                 } else {
-                    // Para imágenes de Google Drive, usar el enlace directo de alta calidad
-                    const fileId = memory.fileId || memory.file.match(/\/d\/([a-zA-Z0-9-_]+)/)?.[1];
-                    const highQualityUrl = `https://drive.google.com/uc?export=view&id=${fileId}&t=${new Date().getTime()}`;
-                    mediaHtml = `<img src="${highQualityUrl}" alt="${memory.title}" class="detail-image" onerror="this.src='${memory.thumbnail}'">`;
+                    // Usar URL de alta calidad para la imagen, pidiendo un tamaño mayor a la miniatura
+                    const imageUrl = `https://drive.google.com/thumbnail?id=${memory.fileId}&sz=w1024`;
+                    mediaHtml = `<img src="${imageUrl}" alt="${memory.title}" class="detail-image" onerror="this.onerror=null; this.src='${memory.thumbnail}';">`;
                 }
             } else if (memory.type === 'video') {
-                mediaHtml = `<video class="detail-image" controls><source src="${memory.file}" type="video/mp4"></video>`;
+                mediaHtml = `<video src="${memory.file}" class="detail-image" controls autoplay></video>`;
             } else {
                 mediaHtml = `<img src="${memory.file}" alt="${memory.title}" class="detail-image">`;
             }
