--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             </div>
             
             <div class="gallery-actions">
-                <button class="action-btn" onclick="startPresentationMode()"><i class="fas fa-play"></i> Presentación</button>
+                <button class="action-btn" onclick="testPresentationClick()"><i class="fas fa-play"></i> Presentación</button>
             </div>
             
             <!-- Modal informativo de galería -->
